@@ -523,9 +523,9 @@ static const char *MESSAGE_NAMES[1024] = {
 	"WM_MBUTTONUP",
 	"WM_MBUTTONDBLCLK",
 	"WM_MOUSEWHEEL",
-	"523",
-	"524",
-	"525",
+	"WM_XBUTTONDOWN",
+	"WM_XBUTTONUP",
+	"WM_XBUTTONDBLCLK",
 	"526",
 	"527",
 	"WM_PARENTNOTIFY",
